# mochimaki_desktop

./: .gitignore  MERMAID_CONTAINER_DEVELOPMENT.md  Mochimaki.py  README.md  pyproject.toml  requirements.txt
new_format/: project_info.json
utils/: __init__.py  app_utils.py  container_utils.py  dialogs.py  file_utils.py  generate_docker_compose.py  ip_settings.py  mermaid_container_manager.py  mermaid_ui.py  settings.py  system_graph_viewer.py  ui_utils.py
utils/backup_Mochimaki_54/: container_utils.py  generate_docker_compose.py  ip_settings.py  settings.py
utils/ui/: __init__.py  app_utils.py  browser_utils.py  container_operations.py  data_path_utils.py  desktop_apps.py  event_handlers.py  ip_utils.py  ui_components.py
