[tool.poetry]
name = "mochimaki"
version = "0.1.0"
description = "This is an environment for desktop applications controling containers maintaining M2K."
authors = ["teruteruzeus <teruteruzeus@gmai.com>"]
readme = "README.md"
packages = [{include = "utils"}]

[tool.poetry.dependencies]
python = "^3.11"
flet = {version = "^0.25.2", extras = ["all"]}


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
